# hangsha/src/main/kotlin/com/team1/hangsha/timetable/model/Timetable.kt
@@ -1,4 +1,22 @@
 package com.team1.hangsha.timetable.model
 
-class Timetable {
-}
+import org.springframework.data.annotation.CreatedDate
+import org.springframework.data.annotation.Id
+import org.springframework.data.annotation.LastModifiedDate
+import org.springframework.data.relational.core.mapping.Table
+import com.team1.hangsha.common.enums.Semester
+import java.time.Instant
+
+@Table("timetables")
+data class Timetable(
+    @Id var id: Long? = null,
+
+    var userId: Long,
+    var name: String,
+
+    var year: Int,
+    var semester: Semester,
+
+    @CreatedDate var createdAt: Instant? = null,
+    @LastModifiedDate var updatedAt: Instant? = null,
+)
